--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@hapi/boom": "^10.0.0",
-    "cors": "^2.8.5",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "faker": "^5.5.3",
-    "joi": "^17.6.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "faker": "^5.5.3",
+    "joi": "^17.6.3",
+    "cors": "^2.8.5",
+    "@hapi/boom": "^10.0.0"
   },
   "engines": {
     "node": "16.x"
